--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = thlogprob
 	url = https://github.com/danielecastellana22/thlogprob
     branch = main
+[submodule "tensorfun"]
+	path = tensorfun
+	url = https://github.com/danielecastellana22/tensorfun
+	branch = main
