--- a/tasks/listOps/config_files/LSTM/tt/config.yaml
+++ b/tasks/listOps/config_files/LSTM/tt/config.yaml
@@ -3,7 +3,7 @@ experiment_config:
   output_dir: results/listOps/LSTM/tt
   num_run: 3
   metric_class_list:
-    - experiments.metrics.Accuracy
+    - exputils.metrics.Accuracy
 dataset_config:
   #dataset_class: experiments.sst.sst_dataset.SSTBinaryDataset
   # this folder must contains: train.pkl, dev.pkl, test.pkl
@@ -11,7 +11,7 @@ dataset_config:
 others_config:
   gpu: -1
 trainer_config:
-  class: models.trainers.NeuralTrainer
+  class: exputils.trainers.NeuralTrainer
   training_params:
     batch_size: 50
     early_stopping_patience: 5
