--- a/tasks/sst/config_files/sst_2/bin_const/sumchild/config.yaml
+++ b/tasks/sst/config_files/sst_2/bin_const/sumchild/config.yaml
@@ -1,27 +1,29 @@
 dataset_config:
-  data_dir: data/sick/dgl_const
-  output_type: entailment
+  data_dir: data/sst/dgl_bin_const_2
 experiment_config:
   metric_class_list:
-  - experiments.metrics.Accuracy
+  - exputils.metrics.RootAccuracy
+  - exputils.metrics.Accuracy
+  - exputils.metrics.LeavesAccuracy
   num_run: 3
-  output_dir: results/sick_e/no_types/const/tt_lmn
+  output_dir: results/sst_2/no_types/bin_const/sumchild
 others_config:
   gpu: -1
 training_config:
-  class: models.trainers.NeuralTrainer
+  class: exputils.trainers.NeuralTrainer
   params:
     batch_size:
+    - 5
     - 10
     - 25
-    - 40
     collate_fun:
-      class: torch.nn.CrossEntropyLoss
-      params: entailment
+      class: tasks.sst.exp_utils.SstCollateFun
     early_stopping_patience: 5
     evaluate_on_training_set: true
     loss_function:
       class: torch.nn.CrossEntropyLoss
+      params:
+        ignore_index: -1
     n_epochs: 100
     optimiser:
       class: torch.optim.Adadelta
@@ -31,29 +33,26 @@ tree_module_config:
     cell_module_config:
       class: models.neural.cells.LSTM
       params:
-        aggregator_class: models.neural.aggregators.TensorTrainLMN
+        aggregator_class: models.neural.aggregators.SumChild
         max_output_degree: 2
-        pos_stationarity: true
-        rank:
-        - 10
-        - 30
-        - 50
+        pos_stationarity: false
     h_size:
-    - 150
+    - 100
     - 200
     - 300
     input_module_config:
       class: models.neural.others.VectorEmbedding
       params:
         embedding_type: pretrained
-        freeze: true
-        pretrained_embs: data/sick/dgl_const/pretrained_embs.pkl
-    only_root_state: true
+        freeze: false
+        pretrained_embs: data/sst/dgl_bin_const_2/pretrained_embs.pkl
+    only_root_state: false
     output_module_config:
-      class: tasks.sick.exp_utils.EntailmentClassifier
+      class: models.neural.others.MLP
       params:
+        dropout: 0.5
         h_size:
-        - 50
-        - 100
-        - 200
-        num_classes: 5
+        - 0
+        - 500
+        - 1000
+        num_classes: 2
