--- a/tasks/sst/config_files/sst_5/const/tt/config.yaml
+++ b/tasks/sst/config_files/sst_5/const/tt/config.yaml
@@ -1,20 +1,22 @@
 experiment_config:
-  #experiment_class: tasks.toy.run_utils.NeuralToyExperiment
-  output_dir: results/listOps/RNN/sumchild
+  output_dir: /data/castellana/results/sst_5_with_leaf/no_types/const/tt
   num_run: 3
   metric_class_list:
+    - exputils.metrics.RootAccuracy
     - exputils.metrics.Accuracy
+    - exputils.metrics.LeavesAccuracy
 dataset_config:
   #dataset_class: experiments.sst.sst_dataset.SSTBinaryDataset
   # this folder must contains: train.pkl, dev.pkl, test.pkl
-  data_dir: data/listOps/dgl/
+  data_dir: /data/castellana/data/sst/dgl_const
 others_config:
+  #seed: 1949013946
   gpu: -1
 trainer_config:
   class: exputils.trainers.NeuralTrainer
   training_params:
-    batch_size: 50
-    early_stopping_patience: 10
+    batch_size: [10, 25]
+    early_stopping_patience: 5
     n_epochs: 100
     evaluate_on_training_set: False
     optimiser:
@@ -24,32 +26,27 @@ trainer_config:
       params:
         ignore_index: -1
     collate_fun:
-      class: tasks.listOps.exp_utils.ListOpsCollateFun
-      params:
-        only_root: True
+      class: tasks.sst.exp_utils.SstCollateFun
 tree_module_config:
   class: models.neural.recursive.RecNN
   params:
-    h_size: [25, 88, 214]
-    only_root_state: True
+    h_size: [150, 200, 300]
+    only_root_state: False
     cell_module_config:
-      class: models.neural.cells.Typed
+      class: models.neural.cells.LSTM
       params:
-        num_types: 4
-        cell_config:
-          class: models.neural.cells.RNN
-          params:
-            aggregator_class: models.neural.aggregators.SumChild #
-            pos_stationarity: False
-            max_output_degree: 5
+        aggregator_class: models.neural.aggregators.TensorTrain
+        pos_stationarity: True
+        rank: [10, 30]
     input_module_config:
       class: models.neural.others.VectorEmbedding
       params:
-        embedding_type: one_hot
-        num_embs: 10
+        embedding_type: pretrained
+        pretrained_embs: /data/castellana/data/sst/dgl_const/pretrained_embs.pkl
+        freeze: False
     output_module_config:
       class: models.neural.others.MLP
       params:
-        num_classes: 10
-        num_layers: 2
-        h_size: 20
+        num_classes: 5
+        h_size: [0, 500, 1000]
+        dropout: 0.5
