--- a/tasks/trec/config_files/trec_6/const/tt/config.yaml
+++ b/tasks/trec/config_files/trec_6/const/tt/config.yaml
@@ -1,14 +1,12 @@
 experiment_config:
-  output_dir: results/sick_r/no_types/const/tt
+  output_dir: /data/castellana/results/trec_6/no_types/const/tt
   num_run: 3
   metric_class_list:
-    - tasks.sick.exp_utils.PearsonSICK
-    - tasks.sick.exp_utils.MseSICK
+    - exputils.metrics.Accuracy
 dataset_config:
-  output_type: entailment
   #dataset_class: experiments.sst.sst_dataset.SSTBinaryDataset
   # this folder must contains: train.pkl, dev.pkl, test.pkl
-  data_dir: data/sick/dgl_const
+  data_dir: /data/castellana/data/trec/dgl_const
 others_config:
   #seed: 1949013946
   gpu: -1
@@ -22,11 +20,11 @@ trainer_config:
     optimiser:
       class: torch.optim.Adadelta
     loss_function:
-      class: tasks.sick.exp_utils.SickRelatednessLoss
+      class: torch.nn.CrossEntropyLoss
     collate_fun:
-      class: tasks.sick.exp_utils.SickCollateFun
+      class: tasks.trec.exp_utils.TrecCollateFun
       params:
-        output_type: relatedness
+        output_type: coarse
 tree_module_config:
   class: models.neural.recursive.RecNN
   params:
@@ -37,15 +35,15 @@ tree_module_config:
       params:
         aggregator_class: models.neural.aggregators.TensorTrain #Canonical
         pos_stationarity: True
-        #max_output_degree: 5
         rank: [10, 30]
     input_module_config:
       class: models.neural.others.VectorEmbedding
       params:
         embedding_type: pretrained
-        pretrained_embs: data/sick/dgl_const/pretrained_embs.pkl
+        pretrained_embs: /data/castellana/data/trec/dgl_const/pretrained_embs.pkl
         freeze: True
     output_module_config:
-      class: tasks.sick.exp_utils.RelatednessClassifier
+      class: models.neural.others.MLP
       params:
-        h_size: [50, 100, 200]
+        num_classes: 6
+        h_size: [0, 50, 100]
