--- a/tasks/trec/config_files/trec_6/tree_net/config.yaml
+++ b/tasks/trec/config_files/trec_6/tree_net/config.yaml
@@ -1,44 +1,38 @@
 dataset_config:
-  data_dir: data/sick/dgl_bin_const
-  output_type: relatedness
+  data_dir: data/trec/dgl_tree_net
+  output_type: coarse
 experiment_config:
   metric_class_list:
-  - tasks.sick.exp_utils.PearsonSICK
-  - tasks.sick.exp_utils.MseSICK
+  - exputils.metrics.Accuracy
   num_run: 3
-  output_dir: results/sick_r/no_types/bin_const/canonical
+  output_dir: results/trec_6/no_types/tree_net
 others_config:
   gpu: -1
 training_config:
   class: exputils.trainers.NeuralTrainer
   params:
-    batch_size:
-    - 10
-    - 25
-    - 40
+    batch_size: 25
     collate_fun:
-      class: tasks.sick.exp_utils.SickCollateFun
-      params: relatedness
+      class: tasks.trec.exp_utils.TrecCollateFun
+      params: coarse
     early_stopping_patience: 5
     evaluate_on_training_set: true
     loss_function:
-      class: tasks.sick.exp_utils.SickRelatednessLoss
+      class: torch.nn.CrossEntropyLoss
     n_epochs: 100
     optimiser:
-      class: torch.optim.Adadelta
+      class: torch.optim.Adam
+      params:
+        'lr': [0.001,0.005,0.008]
 tree_module_config:
   class: models.neural.recursive.RecNN
   params:
     cell_module_config:
-      class: models.neural.cells.LSTM
+      class: models.neural.cells.TreeNet
       params:
-        aggregator_class: models.neural.aggregators.Canonical
+        aggregator_class: models.neural.aggregators.SumChild
         max_output_degree: 2
         pos_stationarity: false
-        rank:
-        - 30
-        - 50
-        - 100
     h_size:
     - 150
     - 200
@@ -48,13 +42,13 @@ tree_module_config:
       params:
         embedding_type: pretrained
         freeze: true
-        pretrained_embs: data/sick/dgl_bin_const/pretrained_embs.pkl
+        pretrained_embs: data/trec/dgl_tree_net/pretrained_embs.pkl
     only_root_state: true
     output_module_config:
-      class: tasks.sick.exp_utils.RelatednessClassifier
+      class: models.neural.others.MLP
       params:
+        dropout: 0.5
         h_size:
+        - 0
         - 50
         - 100
-        - 200
-        num_classes: 5
