--- a/tasks/boolSent/config_files/boolSent_5/LSTM/canonical/config.yaml
+++ b/tasks/boolSent/config_files/boolSent_5/LSTM/canonical/config.yaml
@@ -51,5 +51,5 @@ exp_module_config:
     output_module_config:
       class: models.neural.others.MLP
       params:
-        num_classes: 2
+        out_size: 2
         num_layers: 0
