--- a/tasks/boolSent/config_files/boolSent_5/RNN/full/config.yaml
+++ b/tasks/boolSent/config_files/boolSent_5/RNN/full/config.yaml
@@ -50,5 +50,5 @@ exp_module_config:
     output_module_config:
       class: models.neural.others.MLP
       params:
-        num_classes: 2
+        out_size: 2
         num_layers: 0
