--- a/tasks/sst/config_files/sst_5/const/tt/config.yaml
+++ b/tasks/sst/config_files/sst_5/const/tt/config.yaml
@@ -47,6 +47,6 @@ exp_module_config:
     output_module_config:
       class: models.neural.others.MLP
       params:
-        num_classes: 5
+        out_size: 5
         h_size: [0, 500, 1000]
         dropout: 0.5
