Modified SST and TREC task following the new dataset management.

--- a/tasks/sst/config_files/sst_2/const/sumchild/config.yaml
+++ b/tasks/sst/config_files/sst_2/const/sumchild/config.yaml
@@ -1,5 +1,3 @@
-dataset_config:
-  data_dir: data/sst/dgl_const_2
 experiment_config:
   metric_class_list:
   - exputils.metrics.RootAccuracy
@@ -7,15 +5,19 @@ experiment_config:
   - exputils.metrics.LeavesAccuracy
   num_run: 3
   output_dir: _results/sst_2/no_types/const/sumchild
+  device: 'cpu'
+  seed: -1
+dataset_config:
+  class: tasks.sst.exp_utils.SstLoader
+  params:
+    data_dir: data/sst/dgl_const_2
+    batch_size:
+      - 5
+      - 10
+      - 25
 training_config:
   class: exputils.trainerss.NeuralTrainer
   params:
-    batch_size:
-    - 5
-    - 10
-    - 25
-    collate_fun:
-      class: tasks.sst.exp_utils.SstCollateFun
     early_stopping_patience: 5
     evaluate_on_training_set: true
     loss_function:
