--- a/tasks/trec/config_files/trec_6/const/tt/config.yaml
+++ b/tasks/trec/config_files/trec_6/const/tt/config.yaml
@@ -3,28 +3,27 @@ experiment_config:
   num_run: 3
   metric_class_list:
     - exputils.metrics.Accuracy
+  device: 'cpu'
+  seed: -1
 dataset_config:
-  #dataset_class: experiments.sst.sst_dataset.SSTBinaryDataset
-  # this folder must contains: train.pkl, dev.pkl, test.pkl
-  data_dir: data/trec/dgl_const
-others_config:
-  #seed: 1949013946
-  gpu: -1
+  class: tasks.sst.exp_utils.SstLoader
+  params:
+    data_dir: data/trec/dgl_const
+    output_type: coarse
+    batch_size:
+      - 10
+      - 25
+      - 40
 trainer_config:
   class: exputils.trainerss.NeuralTrainer
   params:
-    batch_size: [25, 40] #[10, 25, 40]
-    early_stopping_patience: 10
+    early_stopping_patience: 5
     n_epochs: 100
     evaluate_on_training_set: False
     optimiser:
       class: torch.optim.Adadelta
     loss_function:
       class: torch.nn.CrossEntropyLoss
-    collate_fun:
-      class: tasks.trec.exp_utils.TrecCollateFun
-      params:
-        output_type: coarse
 exp_module_config:
   class: models.neural.recursive.RecNN
   params:
