--- a/tasks/trec/config_files/trec_6/tree_net/config.yaml
+++ b/tasks/trec/config_files/trec_6/tree_net/config.yaml
@@ -1,18 +1,19 @@
-dataset_config:
-  data_dir: data/trec/dgl_tree_net
-  output_type: coarse
 experiment_config:
   metric_class_list:
   - exputils.metrics.Accuracy
   num_run: 3
   output_dir: _results/trec_6/no_types/tree_net
+  device: 'cpu'
+  seed: -1
+dataset_config:
+  class: tasks.sst.exp_utils.SstLoader
+  params:
+    data_dir: data/trec/dgl_tree_net
+    output_type: coarse
+    batch_size: 25
 training_config:
   class: exputils.trainerss.NeuralTrainer
   params:
-    batch_size: 25
-    collate_fun:
-      class: tasks.trec.exp_utils.TrecCollateFun
-      params: coarse
     early_stopping_patience: 5
     evaluate_on_training_set: true
     loss_function:
